--- a/tiletest/tiletest.css
+++ b/tiletest/tiletest.css
@@ -1,24 +1,34 @@
+#background {
+    background-color: #101050;
+}
+
 .tiling {
     height: 10000px;
     background-color: transparent;
-    background-image: url('lightningbolt.jpg');
+    background-image: url('lightningbolt.svg');
     background-repeat: round round;
-    background-size: 10px;
+    background-size: 20px;
     background-attachment: scroll;
 }
 
+/* background-tiling that resizes to match containing  */
+#nested.tiling {
+    width: fit-content;
+    height: fit-content;
+}
+
 .resizeable_tiling {
-    width: 192px;
-    height: 108px;
+    /* scaled icons are 200px tall, and therefore 100px wide, so 1 row of 10 */
+    width: 1000px;
+    height: 200px;
     resize: both;
-    overflow: scroll;
+    overflow: hidden; /* resize handles don't appear unless overflow is specified*/
     background-color: transparent;
-    background-image: url('lightningbolt.jpg');
+    background-image: url('lightningbolt.svg');
     background-repeat: round round;
-    background-size: 10px;
+    background-size: auto 200px; /* 1/10th scale of source: 1000x2000 */
     background-attachment: local;
     
-    padding: 25px;
-    border: 1px solid #000000;
-    display: inline-block; /* padding doesn't apply without this */
+    border: 1px solid #777777;
 }
+
