--- a/tiletest/tiletest.css
+++ b/tiletest/tiletest.css
@@ -12,10 +12,9 @@
     vertical-align: middle;
     justify-content: center;
     align-items: center;
-    
+    display: flex;
     /* setting any value for 'display' PERMANENTLY disables the 'hidden' attribute,
     that's the reason 'testme' must be excluded from this rule. */
-    display: flex;
 }
 
 .tiling {
@@ -27,7 +26,7 @@
     background-attachment: scroll;
 }
 
-/* background-tiling that resizes to match containing  */
+/* background-tiling that resizes to match containing element */
 #nested.tiling {
     width: fit-content;
     height: fit-content;
@@ -54,62 +53,3 @@
     border: 2px solid hotpink;
     position: relative;
 }
-
-
-/* -------------------------------------------------- */
-/* Rules for info section at the top of the page */
-/* -------------------------------------------------- */
-
-#topbar_info {
-    top: 0px;
-    position: sticky;
-    /* border: 1px solid red; */
-}
-
-#counter {
-    color: yellow;
-    font-size: 4em;
-    font-weight: bold;
-    background-color: #555555;
-}
-
-#threshold_list {
-    font-size: 1.5em;
-    color: #FFFFFF;
-    background-color: #777777;
-    font-weight: bold;
-    padding: 0px 0px 0px 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-#threshold_list > li {
-    font-size: 1em;
-    color: #00FF00;
-    background-color: #777777;
-    list-style: inside;
-}
-
-#threshold_list > li.good { color: cyan; background-color: #00FF0044; }
-#threshold_list > li.bad { color: #D0D0D088; background-color: #FF000033; }
-
-
-/* -------------------------------------------------- */
-
-/*
-  recoloring SVGs used to be possible, but not anymore;
-  loading the image for 'mask' always throws a CORS error,
-  which is an intentional '''security feature'''
-  
-  https://codepen.io/noahblon/post/coloring-svgs-in-css-background-images
-  https://developer.mozilla.org/en-US/docs/Web/HTTP/Guides/CORS/Errors/CORSRequestNotHttp
-*/
-/* #recolorme {
-    height: 200px;
-    width: 100px;
-    background-size: 200px;
-    background-color: red;
-    background-image: url(lightningbolt.svg);
-    background-repeat: round round;
-    mask: url(lightningbolt.svg);
-} */
