--- a/tiletest/info_section.css
+++ b/tiletest/info_section.css
@@ -10,13 +10,13 @@
 
 #counter {
     color: yellow;
-    font-size: 4em;
+    font-size: 2.5em;
     font-weight: bold;
     background-color: #555555;
 }
 
 #threshold_list {
-    font-size: 1.5em;
+    font-size: 1em;
     color: #FFFFFF;
     background-color: #777777;
     font-weight: bold;
@@ -30,6 +30,7 @@
     color: #00FF00;
     background-color: #777777;
     list-style: inside;
+    margin-top: -1px;
 }
 
 #threshold_list > li.good { color: cyan; background-color: #00FF0044; }
