Complete JS rewrite. Implemented multiple counters and counting all tiles

--- a/tiletest/info_section.css
+++ b/tiletest/info_section.css
@@ -6,6 +6,7 @@
     top: 0px;
     position: sticky;
     /* border: 1px solid red; */
+    background-color: #555555;
 }
 
 #counter {
@@ -15,7 +16,17 @@
     background-color: #555555;
 }
 
-#threshold_list {
+.table_counter {
+    color: yellow;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+#table_container {
+    display: flex;
+}
+
+#table_container > table {
     font-size: 1em;
     color: #FFFFFF;
     background-color: #777777;
@@ -23,16 +34,22 @@
     padding: 0px 0px 0px 0px;
     margin-top: 0px;
     margin-bottom: 0px;
+    /*display: inline-block;*/
 }
 
-#threshold_list > li {
+.threshold_table th {
+    border: 2px solid #00000020;
+}
+
+.threshold_table > li {
     font-size: 1em;
     color: #00FF00;
     background-color: #777777;
     list-style: inside;
-    margin-top: -1px;
+    /*margin-top: -1px;*/
+    padding-right: 4px;
+    border: 1px solid #FFFFFF20;
 }
 
-#threshold_list > li.good { color: cyan; background-color: #00FF0044; }
-#threshold_list > li.bad { color: #D0D0D088; background-color: #FF000033; }
-
+.threshold_table > li.good { color: cyan; background-color: #00FF0044; }
+.threshold_table > li.bad { color: #D0D0D088; background-color: #FF000033; }
