--- a/tiletest/info_section.css
+++ b/tiletest/info_section.css
@@ -35,6 +35,7 @@
     margin-top: 0px;
     margin-bottom: 0px;
     /*display: inline-block;*/
+    width: 100%; /* stretch to fill horizontally */
 }
 
 .threshold_table th {
