--- a/tiletest/tiletest.css
+++ b/tiletest/tiletest.css
@@ -2,10 +2,14 @@
 	background: linear-gradient(#101050 25%, #FFF52A); /* starts 25% down the page */
 }
 
+#gradient_container {
+	background: linear-gradient(#FFF52A, #FF0000);
+}
+
 /* setting default font properties for all body divs */
 #background > div:not(.testme) {
     color: #00FFAA;
-    font-size: 3em;
+    font-size: 2.5em;
     
     /* all this garbage just to center text vertically */
     text-align: center;
