moved RGBified tiletest reverted RGBification

--- a/tiletest_rgb/tiletest.css
+++ b/tiletest_rgb/tiletest.css
@@ -1,7 +1,13 @@
 body { margin: 0px; }
 
+#svg_display, #out_display {
+    /* somehow the default is 180deg? */
+	background: linear-gradient(0deg, #FFF52A, #2AFFF4, #F42AFF, #FFF42A);
+}
+
 #background {
-	 background: linear-gradient(#101050 25%, #FFF52A);  /* starts 25% down the page */
+	/* background: linear-gradient(#101050 25%, #FFF52A); */ /* starts 25% down the page */
+    background: linear-gradient(-90deg, #101050, #FFF52A 4%, #2AFFF4, #F42AFF, #FFF42A 96%, #101050);
 }
 
 /* setting default font properties for all body divs */
