--- a/tiletest/info_section.css
+++ b/tiletest/info_section.css
@@ -7,6 +7,7 @@
     position: sticky;
     /* border: 1px solid red; */
     background-color: #555555;
+    z-index: 1; /* keep above other elements */
 }
 
 #counter, #scroll_counter {
@@ -57,3 +58,5 @@
 
 .threshold_table > li.good { color: cyan; background-color: #00FF0044; }
 .threshold_table > li.bad { color: #D0D0D088; background-color: #FF000033; }
+
+#jump_container { color: lightgrey; padding: 2px; }
