--- a/tiletest/tiletest.css
+++ b/tiletest/tiletest.css
@@ -57,3 +57,9 @@ otherwise it breaks the handles every time one of the 'testme' divs pops in */
     border: 2px solid hotpink;
     position: absolute;
 }
+
+.target {
+    padding: 75px;
+    border: 2px solid red;
+    background: radial-gradient(#101050FF, #10105020);
+}
