--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ html, body {
 .padder {
   height: 20px;
   margin-top: 50px;
-  z-index:6000;
   position: relative;
 }
 .padder,
@@ -22,7 +21,6 @@ html, body {
   text-align: center;
   padding: 13px;
   position:relative;
-  z-index:5000;
 }
 .subtitle .description {
   font-size: 20px;
@@ -110,25 +108,6 @@ html.black-sparse  body {
   position: sticky;
   z-index: 10000;
 }
-.infobox.intro {
-  margin-top: 1500px;
-}
-
-.infobox.first {
-  margin-top: 5000px;
-}
-
-.infobox.second {
-  margin-top: 5000px;
-}
-
-.infobox.third {
-  margin-top: 5000px;
-}
-
-.infobox.fourth {
-  margin-top: 5000px;
-}
 
 .infobox {
   margin: auto;
@@ -136,21 +115,18 @@ html.black-sparse  body {
 }
 .infobox {
   font-family: "Figtree", sans-serif;
-  margin-top: 10000px;
-  height: 5000px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
 }
 .infobox-inner {
-    font-size: 2em;
+    /*font-size: 2em;*/ /* somehow the font-size prevents the intro from being scrolled into view?????? */
     top: 200px;
     padding: 10px;
     background-color: #ffffff;
     box-shadow: None;
     max-width: 700px;
     position: sticky;
-    z-index: 10;
     display: inline-block;
     padding: 20px;
     border-radius: 20px;
@@ -163,7 +139,7 @@ html.black-sparse  body {
 }
 #state-rank-intro { height: auto; } /* no space before the chart */
 #state-rank.expandable {
-  position: sticky; /* keep chart in view until expanded */
+  /*position: sticky;*/ /* keep chart in view until expanded */
   margin-top: 1em; /* stick the chart immediately after the preceeding infobox */
   top: 10em; /* keep the chart's title within view (preventing it from being scrolled under the page-title) */
   height: auto;
@@ -261,9 +237,6 @@ html.black-sparse  body {
   padding-left: 0;
   padding-right: 0;
 }
-#casualties {
-  margin-top: 2000px;
-}
 #casualties .bar {
   min-height: 70px;
 }
@@ -336,9 +309,6 @@ html.black-sparse  body {
 .vertical-bars .bar .bar-label.no-pad {
   padding-top: 0;
 }
-.correctional-population {
-  margin-bottom: 28000px;
-}
 .correctional-population .infobox-inner {
   height: 430px;
 }
@@ -354,69 +324,11 @@ p:last-child {
   padding-right: 10px;
 }
 .blue,
-.red {
-  margin-bottom: 5000px;
-}
-.floyd {
-  height: 18000px;
-  display: flex;
-  align-items: flex-start;
-}
-.floyd .infobox-inner {
-  border: none;
-  background-color: transparent;
-  box-shadow: none;
-}
-.floyd .infobox-inner.icon {
-  background-image: url(img/person/red.svg);
-  background-size: 10px;
-  background-repeat: no-repeat;
-  background-position: 12px 25px;
-  height: 40px;
-}
-.floyd .infobox-inner.text {
-  height: 10000px;
-  display: flex;
-  align-items: flex-start;
-}
 .highlight {
   background-color: #57c8ff;
   display: block;
   padding: 10px;
   box-shadow: -5px 5px 5px #505050;
-}
-#unconvicted {
-  font-size: 13px;
-}
-#unconvicted .bar {
-  background-color: #b70000;
-  color: white;
-  box-shadow: -2px 2px 5px black;
-}
-#unconvicted .bar.highlighted {
-  background-color: grey;
-}
-.without-conviction-label {
-  width: 125px;
-  background-color: #ff6161;
-  height: auto;
-  padding: 5px;
-  display: block;
-  font-size: 14px;
-  text-align: left;
-  border: 2px dashed black;
-  position: absolute;
-  top: auto;
-  left: 36%;
-}
-.without-conviction-label:before {
-  display: block;
-  content: '';
-  border-top: 2px dashed black;
-  width: 78%;
-  height: 1px;
-  position: absolute;
-  left: -80%;
 }
 .stadium {
   width: 100%;
@@ -455,16 +367,6 @@ p:last-child {
   text-align: center;
   width: 25%;
 }
-.stalin .vertical-bars .stalin-bar {
-  background-color: #CD0000;
-  background-image: url(img/stalin.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: bottom;
-}
-.repression .vertical-bars .bar {
-
-}
 .vertical-bars .bar.white-men {
   background-color: white;
 }
@@ -475,21 +377,9 @@ p:last-child {
 .infobox-near-near {
   margin-top: 100px;
 }
-.infobox-near {
-  margin-top: 1000px;
-}
-.infobox-half {
-  margin-top: 5000px;
-}
-.infobox-quarter {
-  margin-top: 2500px;
-}
 #dots .infobox-inner {
   max-width: 585px;
   display: block;
-}
-#freedom-wrapper {
-  height: 10000px;
 }
 #freedom, #better-world {
   font-size: 28px;
@@ -515,12 +405,6 @@ p:last-child {
   hyphens: auto;
   margin-left: 40px;
 }
-#subgroup {
-  max-width: 100%;
-  height: 2500px;
-  margin-bottom: 5000px;
-  justify-content: left;
-}
 #subgroup img {
   max-width: 100%;
 }
@@ -531,7 +415,6 @@ p:last-child {
   padding: 0;
   box-shadow: none;
   background-image: url(img/funnel_d.svg);
-  height: calc(100vw * 2.5);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -705,6 +588,12 @@ p:last-child {
   margin-top: 40%;
   padding-bottom: 30px;
 }
+#subgroup {
+  max-width: 100%;
+  height: 2500px;
+  margin-bottom: 5000px;
+  justify-content: left;
+}
 .curve #curve,
 .curve .transition,
 .curve #nineteen-twenty,
@@ -766,11 +655,7 @@ p:last-child {
   width: 50%;
   border: 2px solid;
 }
-#since-it-began {
-  height: 2500px;
-}
 #curve-wrapper-outer {
-  height: 27500px;
   margin-bottom: -27500px;
 }
 .relative {
@@ -1022,15 +907,8 @@ blockquote strong {
   justify-content: flex-start;
   font-size: 20px;
 }
-#end-card {
-  height: 20000px;
-}
 #end-card .infobox-inner {
   max-width: 100%;
-}
-#end-card h2 {
-  font-size: 70px;
-  margin-bottom: 0;
 }
 @media (min-width: 451px) {
   #bubbles-outer {
@@ -1188,30 +1066,6 @@ blockquote strong {
   }
   .vertical-bars .bar .bar-label.tool-tip.left:after {
     right: -34px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-100 {
-    margin-top: 100px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-200 {
-    margin-top: 200px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-270 {
-    margin-top: 270px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-320 {
-    margin-top: 320px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-460 {
-    margin-top: 460px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-1000 {
-    margin-top: 1000px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-2600 {
-    margin-top: 2600px;
-  }
-  .vertical-bars .bar .bar-label.tool-tip.bar-label-11800 {
-    margin-top: 11800px;
   }
   .vertical-bars .bar.last .bar-label.tool-tip {
     width: 190px;
@@ -1420,10 +1274,6 @@ blockquote strong {
     top: 11vh;
     overflow: hidden;
   }
-  #bubble-header h2,
-  #bubble-header label {
-
-  }
   #bubbles-outer {
     overflow: visible;
     height: 17000px;
@@ -1543,38 +1393,6 @@ blockquote strong {
 }
 .mute .infobox {
   display: none !important;
-}
-.unscroll #casualties,
-.unscroll #subgroup,
-.unscroll #dots,
-.unscroll #freedom-wrapper,
-.unscroll .infobox {
-  margin-top: 0;
-  margin-bottom: 0;
-  height: auto;
-}
-.unscroll .floyd .infobox-inner.text {
-  padding: 0;
-  height: auto;
-}
-.unscroll .floyd .infobox-inner .highlight,
-.unscroll .infobox-inner {
-  position: static !important;
-  box-shadow: none;
-}
-.unscroll .stalin,
-.unscroll .repression,
-.unscroll .correctional-population {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-}
-.unscroll .stalin .infobox-inner,
-.unscroll .repression .infobox-inner,
-.unscroll .correctional-population .infobox-inner {
-  height: auto !important;
-}
-.unscroll .correctional-population .infobox-inner {
-  border: 4px dashed black;
 }
 
 
